tests/machine/x/c/for_map_collection.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/for_map_collection.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/for_map_collection.c:49:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   49 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/for_map_collection.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/for_map_collection.c:50:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   50 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/for_map_collection.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/for_map_collection.c:51:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   51 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/for_map_collection.c:52:28: error: request for member ‘len’ in something not a structure or union
   52 |   for (int _t2 = 0; _t2 < m.len; _t2++) {
      |                            ^
/workspace/mochi/tests/machine/x/c/for_map_collection.c:53:14: error: request for member ‘data’ in something not a structure or union
   53 |     int k = m.data[_t2];
      |              ^

   1: #include <stdio.h>
